--- a/app/src/main/res/drawable/bg3_layer.xml
+++ b/app/src/main/res/drawable/bg3_layer.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="#4325E6"
+        android:startColor="#5B41EC"
         android:endColor="#49B4B4"
         android:angle="90"
         />
